RESOLVED FIXED48704
Percentage z offset in transform-origin should make the property invalid
https://bugs.webkit.org/show_bug.cgi?id=48704
Summary Percentage z offset in transform-origin should make the property invalid
Simon Fraser (smfr)
Reported 2010-10-29 18:11:39 PDT
transform-origin: 20% 10% 30%; should be ignored, since the % value for z offset is invalid.
Attachments
Patch (7.47 KB, patch)
2010-11-21 01:54 PST, Rob Buis
no flags
I noticed that unfortunately my previous patch caused regressions, sorry about that! This one causes no regressions but ofcourse needs to rechecked. Cheers, Rob (7.74 KB, patch)
2010-11-23 23:35 PST, Rob Buis
simon.fraser: review+
Rob Buis
Comment 1 2010-11-21 01:54:46 PST
Simon Fraser (smfr)
Comment 2 2010-11-21 08:31:41 PST
Comment on attachment 74497 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=74497&action=review > LayoutTests/fast/css/script-tests/transform-origin-parsing.js:18 > +shouldBe('test("-webkit-transform-origin: 10px 10px 10px", "-webkit-transform-origin")', '"10px 10px 10px"'); It might be good to also test a lack of units on the z value: "-webkit-transform-origin: 10px 10px 10" This should not parse.
Rob Buis
Comment 3 2010-11-21 09:25:32 PST
Hi Simon, (In reply to comment #2) > (From update of attachment 74497 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=74497&action=review > > > LayoutTests/fast/css/script-tests/transform-origin-parsing.js:18 > > +shouldBe('test("-webkit-transform-origin: 10px 10px 10px", "-webkit-transform-origin")', '"10px 10px 10px"'); > > It might be good to also test a lack of units on the z value: > "-webkit-transform-origin: 10px 10px 10" > This should not parse. I added it locally and unfortunately it does parse. It is due to the m_strict usage in parseTransformOriginShorthand, should I force it to true? Or is that something for another patch/bug? Cheers, Rob.
Rob Buis
Comment 4 2010-11-23 23:35:49 PST
Created attachment 74724 [details] I noticed that unfortunately my previous patch caused regressions, sorry about that! This one causes no regressions but ofcourse needs to rechecked. Cheers, Rob
Simon Fraser (smfr)
Comment 5 2010-11-26 10:26:27 PST
(In reply to comment #3) > I added it locally and unfortunately it does parse. It is due to the m_strict usage in > parseTransformOriginShorthand, should I force it to true? Or is that something for > another patch/bug? Hm, maybe that is expected to work. Let's leave that for another patch (if indeed it needs fixing).
Rob Buis
Comment 6 2010-11-27 06:18:24 PST
Landed in r72776.
Note You need to log in before you can comment on or make changes to this bug.