2010-11-26  Rob Buis  <rwlbuis@gmail.com>

Reviewed by Simon Fraser.

        Percentage z offset in transform-origin should make the property invalid
        https://bugs.webkit.org/show_bug.cgi?id=48704

        Discard transform-origin property when parsing invalid Z value.

        Test: fast/css/transform-origin-parsing.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseTransformOriginShorthand):
        (WebCore::CSSParser::parseTransformOrigin):
        * css/CSSParser.h:

Canonical link: https://commits.webkit.org/63235@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72776 268f45cc-cd09-0410-ab3c-d52691b4dbfc